[gd_scene load_steps=7 format=3 uid="uid://boegomjyv524"]

[ext_resource type="Script" path="res://Scripts/tower.gd" id="1_l85pf"]
[ext_resource type="PackedScene" uid="uid://da8khvbgtddti" path="res://Scenes/bullet.tscn" id="2_sukw7"]

[sub_resource type="QuadMesh" id="QuadMesh_w1cjs"]
size = Vector2(75, 75)

[sub_resource type="Gradient" id="Gradient_c6avv"]
colors = PackedColorArray(0, 0.85098, 0, 1, 0, 0.478431, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6xish"]
gradient = SubResource("Gradient_c6avv")

[sub_resource type="CircleShape2D" id="CircleShape2D_1pwxi"]
radius = 350.0

[node name="Tower" type="Node2D"]
script = ExtResource("1_l85pf")
bullet_scene = ExtResource("2_sukw7")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
rotation = -1.5708
mesh = SubResource("QuadMesh_w1cjs")
texture = SubResource("GradientTexture1D_6xish")

[node name="Area2D" type="Area2D" parent="."]
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1pwxi")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
